--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
   "dependencies": {
     "axios": "^1.5.0",
     "chart.js": "^4.4.0",
-    "vue": "^3.3.4"
+    "vue": "^3.3.4",
+    "vue-datepicker-ui": "^3.1.1"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^4.2.3",
